--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 
 .container {
     display: flex;
-    background-image: url("Luigi1.png");
     justify-content: center;
 }
 
@@ -23,14 +22,15 @@ h1 {
     font-family: "Pixelify Sans", cursive;
     text-align: center;
     font-size: 5em;
-    color: white;
+    color:white
 }
 
 p {
     font-family: Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-    color: white;
+    font-size: 20px;
+    color:white
 }
 
 .lista-de-productos {
@@ -43,45 +43,53 @@ p {
 
 }
 
-.card {
+.galeria {
     max-width:500em;
     padding: 1em;
     justify-content: center;
 
 }
 
-.card > img {
+.galeria > img {
     width: 100%;
     height: 250px;
 }
 
-.price {
-    color: rgb(209, 155, 19);
-    font-size: 22px;
+.precio {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+    justify-content: center;
 }
 
-.card button {
+.galeria button {
+    font-size: 25px;
+    font-family: "Pixelify Sans", cursive;
+    text-align: center;
     border-radius: 1rem;
     padding: 12px;
-    color: white;
-    background-color:rgba(227, 178, 44, 0.273);
-    text-align: center;
+    color:darkcyan;
+    background-color:white;
     cursor: pointer;
     width: 100%;
-    font-size: 18px;
-    margin-top: 1rem;
 }
 
-.description {
-    color: rgb(0, 0, 0);
-}
-
-
-.card2 {
-    display: block;
-    flex-wrap: wrap;
+.descripcion {
+    color: rgb(255, 255, 255);
+    font-family: Helvetica, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
     justify-content: center;
-    margin: 1em;
+}
+
+
+.galeria2 {
+    margin: 0%;
+    display: block;
+    justify-content: center;
+    
+    
 }
 
 .imagen {
@@ -92,13 +100,43 @@ p {
 }
 
 .imagenProducto {
-    display: block;
+    display: flex;
     border-radius: 1rem;
     justify-content: center;
-    width: 30%;
+    max-width: max-content;
+}
+
+.descripcionLarga {
+    display: block;
     padding: 1em;
-    
-   
+    color: white;
+    font-size: 20px;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+    justify-content: center;
+}
+
+.precio2 {
+    margin: 0%;
+    display: block;
+    color: rgb(255, 255, 255);
+    font-family: Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    justify-content: center;
+}
+
+.inicio{
+    border-radius: 1rem;
+    padding: 10px;
+    font-family: "Pixelify Sans", cursive;
+    color:darkcyan;
+    background-color:white;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 20px;
 }
 
 .boton-inicio {
@@ -107,50 +145,12 @@ p {
     padding: 1em;
 }
 
-.descriptionLarge {
-    display: flex;
-    flex-wrap:wrap;
-    padding: 1em;
-    color: rgb(110, 79, 7);
-    font-size: 30px;
-    text-align: center;
-    justify-content: center;
-}
-
-.price-product {
-    display: block;
-    flex-wrap: wrap;
-    color: rgb(134, 84, 9);
-    font-size: 1.5rem;
-    font-weight: 500;
-    text-align: center;
-    justify-content: center;
-}
-
-.inicio{
-    border-radius: 1rem;
-    padding: 12px;
-    color: rgb(255, 255, 255);
-    background-color:rgba(255, 30, 30, 0.685);
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 360px) {
     .imagenProducto {
         display: flex;
-        flex-direction: row;
+        border-radius: 1rem;
         justify-content: center;
         width: 100%;
     }
-
-    .descriptionLarge {
-        color: rgb(0, 0, 0);
-        font-size: 30px;
-        padding: 1rem;
-        text-align: center;
-        justify-content: center;
-    }
 }
+
